Changelog
=========

1.5 (unreleased)
----------------

- Fixed issue #13: Pyroma would fail if there was no description.

- Dropping support for Python 3.1. It still works, but it is unsupported.


1.4 (2013-05-29)
----------------

- Issue #13: Pyroma would fail when checking a package name if no source
  distribution could be found.
  
- Added a check that the package has a source distribution on PyPI.


1.3.1 (2013-05-29)
------------------

- Issue #11: pyroma would fail if long_description was a non-string.
  
- zest.releaser now only runs Pyroma on Python packages.

- Because packages that use external test-runners can not get more
  that 9/10, this value is now also seens as acceptable when running
  Pyroma through zest.releaser.
  

1.3 (2013-03-15)
----------------

- Added a test to make sure the version number is a string.

- Made sure errors were printed also when a fatal error was encountered.

- Better log messages.

- The zest.releaser hook is now done before tagging, as it's more useful there.
  Especially in conjuction with check-manifest.
  
- Having no long_description no longer causes pyroma to fail.


1.2 (2013-03-06)
----------------

- Removed the running of tests. I always found it a bit iffy, and getting
  rid of it solved a lot of issues. Pyroma is now focused solely on
  packaging quality.
  
- A package on PyPI with several versions will no longer return an error.

- Now looks for documentation on pythonhosted.org or readthedocs.org.

- Adds a hook for zest.releaser, so it can be run after doing the checkout,
  before uploading to PyPI.


1.1 (2013-03-05)
----------------

- Better handling if there is no package data, for example if setup.py doesn't
  call setup() unless you run it as the "__main__" script.
  
- If setup.py doesn't call setup() look for a main() script and try to run it.


1.0 (2013-03-05)
----------------

- Support for Python 3.3

- Added test for PEP 386 compliance.


0.9.3 (2011-03-17)
------------------
