@@ -8,6 +8,8 @@ Changelog
 
 - Dropping support for Python 3.1. It still works, but it is unsupported.
 
+- Added support for command line options, implementing #14 and #15.
+
 
 1.4 (2013-05-29)
 ----------------
